// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pure psql 1`] = `"setweight(to_tsvector(COALESCE(NEW.field1, '')), 'A') || setweight(to_tsvector(COALESCE(NEW.field2, '')), 'A')"`;

exports[`trigger tsvector index 1`] = `
Object {
  "deparse": "setweight(to_tsvector('pg_catalog.simple', COALESCE(array_to_string(tags::citext[], ' '), '')), 'A') || setweight(to_tsvector('pg_catalog.simple', COALESCE(name, '')), 'A') || setweight(to_tsvector('english', COALESCE(description, '')), 'B') || setweight(to_tsvector('pg_catalog.english', COALESCE(name, '')), 'A')",
}
`;

exports[`tsvector 1`] = `
Object {
  "deparse": "to_tsvector(COALESCE(NEW.field1, ''))",
}
`;

exports[`tsvector index 1`] = `
Object {
  "deparse": "setweight(to_tsvector('pg_catalog.simple', COALESCE(name, '')), 'A') || setweight(to_tsvector('english', COALESCE(description, '')), 'B') || setweight(to_tsvector('pg_catalog.english', COALESCE(name, '')), 'A')",
}
`;

exports[`tsvector with lang 1`] = `
Object {
  "deparse": "to_tsvector('pg_catalog.english', COALESCE(NEW.field1, ''))",
}
`;
